--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "event-attendance-backend",
-  "version": "1.0.0",
+  "version": "..",
   "description": "Event Attendance Monitoring System - Backend API",
   "main": "server.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "seed:undo": "sequelize-cli db:seed:undo",
     "seed:undo:all": "sequelize-cli db:seed:undo:all",
     "lint": "eslint .",
-    "format": "prettier --write \"**/*.js\""
+    "format": "prettier --write \"/.js\""
   },
   "keywords": [
     "attendance",
@@ -28,21 +28,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.1.2",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2"
+    "bcryptjs": "^..",
+    "cors": "^..",
+    "dotenv": "^..",
+    "express": "^..",
+    "jsonwebtoken": "^..",
+    "pg": "^..",
+    "pg-hstore": "^..",
+    "sequelize": "^.."
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
-    "sequelize-cli": "^6.6.2",
-    "supertest": "^6.3.3"
+    "eslint": "^..",
+    "jest": "^..",
+    "nodemon": "^..",
+    "prettier": "^..",
+    "sequelize-cli": "^..",
+    "supertest": "^.."
   }
 }
