--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,56 +1,1 @@
- Environment Variables - Frontend Example
-
- API Configuration
-REACT_APP_API_BASE_URL=http://localhost:/api
-REACT_APP_API_TIMEOUT=
-
- Application
-REACT_APP_APP_NAME=Event Attendance Monitor
-REACT_APP_APP_VERSION=..
-
- Feature Flags
-REACT_APP_ENABLE_QR_SCANNING=true
-REACT_APP_ENABLE_XLSX_EXPORT=true
-REACT_APP_ENABLE_ANALYTICS=false
-
- Debug Mode
-REACT_APP_DEBUG_MODE=true
-REACT_APP_DEBUG_API=true
-REACT_APP_LOG_LEVEL=debug
-
- UI Configuration
-REACT_APP_ITEMS_PER_PAGE=
-REACT_APP_MAX_FILE_SIZE=
-
- Authentication
-REACT_APP_TOKEN_STORAGE_KEY=auth_token
-REACT_APP_TOKEN_REFRESH_BEFORE=
-
- Notifications
-REACT_APP_TOAST_AUTO_CLOSE=
-REACT_APP_NOTIFICATION_POSITION=top-right
-
- Performance
-REACT_APP_ENABLE_REACT_DEVTOOLS=true
-REACT_APP_ENABLE_PERFORMANCE_LOGGING=false
-
- Public Analytics (optional)
- REACT_APP_GOOGLE_ANALYTICS_ID=
- REACT_APP_HOTJAR_ID=
-
- Map & Location (optional, Phase )
- REACT_APP_GOOGLE_MAPS_API_KEY=
- REACT_APP_MAPBOX_ACCESS_TOKEN=
-
- Error Reporting (optional, Phase )
- REACT_APP_SENTRY_DSN=
- REACT_APP_SENTRY_ENVIRONMENT=development
-
- Date & Locale
-REACT_APP_DEFAULT_LOCALE=en-US
-REACT_APP_DATE_FORMAT=DD/MM/YYYY
-REACT_APP_TIME_FORMAT=HH:mm:ss
-
- Colors & Theming (optional)
-REACT_APP_PRIMARY_COLOR=bff
-REACT_APP_SECONDARY_COLOR=cd
+VITE_API_URL=http://localhost:5000/api
